# deep_rl_turtlebot_nav

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  package.xml  requirements.txt  simulation_videos
config/: hyperparameters.yaml
docker/: Dockerfile  entrypoint.sh
model/: data  physical_simulation
scripts/: dqn_model.py  navigation_env.py
src/turtlebot3_smart_nav/: CMakeLists.txt  package.xml
src/turtlebot3_smart_nav/config/: training_params.yaml
src/turtlebot3_smart_nav/launch/: run_agent.launch  start_rl_agent.launch
src/turtlebot3_smart_nav/scripts/: README.md  agent_network.py  env_bridge.py  evaluate_agent.py  main_train.py
src/turtlebot3_smart_nav/scripts/algorithms/: __init__.py  crossq_agent.py  ddpg_agent.py  dqn_agent.py  sac_agent.py  td3_agent.py
