<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_smart_navigation</name>
  <version>1.0.0</version>
  <description>Reinforcement-Learning-Based-Smart-Navigation-for-TurtleBot</description>
  <maintainer email="manichandan.mathi@stud.th-deg.de">Research Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
</package>
