<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_smart_nav</name>
  <version>1.0.0</version>
  <description>DRL Mapless Navigation (DQN, DDPG, TD3, SAC, CrossQ)</description>
  <maintainer email="dev@todo.todo">Research Team</maintainer>
  <license>NoLicense</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
</package>
